<?xml version="1.0" encoding="utf-8" ?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:startDestination="@id/news">

    <fragment
            android:id="@+id/news"
            android:name="top.xuqingquan.easynews.view.NewsFragment"
            tools:layout="@layout/fragment_news">

        <action
                android:id="@+id/action_news_to_search_view"
                app:destination="@id/search_view"
                app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"
                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    </fragment>

    <fragment
            android:id="@+id/feedback"
            android:name="top.xuqingquan.easynews.view.FeedbackFragment"
            tools:layout="@layout/fragment_feedback"
            android:label="@string/feedback"/>

    <fragment
            android:id="@+id/checkUpdate"
            android:name="top.xuqingquan.easynews.view.CheckUpdateFragment"
            android:label="@string/checkUpdate"
            tools:layout="@layout/fragment_check_update"/>

    <fragment
            android:id="@+id/edit_category"
            android:name="top.xuqingquan.easynews.view.EditCategoryFragment"
            android:label="@string/edit_category"
            tools:layout="@layout/fragment_edit_category"/>

    <fragment
            android:id="@+id/search_view"
            android:name="top.xuqingquan.easynews.view.SearchFragment"
            tools:layout="@layout/fragment_search"
            android:label="@string/search"/>

    <fragment
            android:id="@+id/newsListFragment"
            android:name="top.xuqingquan.easynews.view.NewsListFragment"
            android:label="@string/app_name"
            tools:layout="@layout/fragment_news_list">

        <argument
                android:name="position"
                app:argType="integer"
                android:defaultValue="0"/>

        <argument
                android:name="type"
                app:argType="string"
                android:defaultValue="@string/recommended"/>

    </fragment>

</navigation>